--- a/Organize.WASM/_Imports.razor
+++ b/Organize.WASM/_Imports.razor
@@ -9,5 +9,7 @@
 @using Organize.WASM.Shared
 @using GeneralUi.Validation
 @using GeneralUi.DropdownControl 
+@using Organize.WASM.Components
+@using Organize.Shared.Entities
 
 
