--- a/Organize.WASM/Pages/Settings.razor
+++ b/Organize.WASM/Pages/Settings.razor
@@ -1,6 +1,6 @@
 ﻿@page "/settings"
 
-@*<AuthorizeView Roles="admin">
+<AuthorizeView Roles="admin">
     <Authorized>
         <div class="p-3">
             <button class="orga-button" @onclick="DeleteAllDone">Delete All Done</button>
@@ -9,9 +9,4 @@
     <NotAuthorized>
         <div>You're not authorized to see this page.</div>
     </NotAuthorized>
-</AuthorizeView>*@
-
-
-<div class="p-3">
-    <button class="orga-button" @onclick="DeleteAllDone">Delete All Done</button>
-</div>
+</AuthorizeView>
