--- a/Organize.WASM/Pages/SignUp.razor
+++ b/Organize.WASM/Pages/SignUp.razor
@@ -1,6 +1,6 @@
 ﻿@page "/signup"
 @inherits SignUpBase
-@*@layout UnAuthLayout*@
+@layout UnAuthLayout
 <div class="sign-form">
     <EditForm EditContext="@EditContext" OnValidSubmit="OnValidSubmit">
         <DataAnnotationsValidator />
