--- a/Organize.WASM/_Imports.razor
+++ b/Organize.WASM/_Imports.razor
@@ -8,8 +8,12 @@
 @using Organize.WASM
 @using Organize.WASM.Shared
 @using GeneralUi.Validation
-@using GeneralUi.DropdownControl 
+@using GeneralUi.DropdownControl
 @using Organize.WASM.Components
 @using Organize.Shared.Entities
+@using Microsoft.AspNetCore.Components.Authorization
+
+@using Blazored.Modal
+@using Blazored.Modal.Services
 
 
