--- a/Organize.WASM/wwwroot/css/app.scss
+++ b/Organize.WASM/wwwroot/css/app.scss
@@ -13,6 +13,34 @@ html, body {
     height: 100%;
 }
 
+.crossed-out {
+    text-decoration: line-through;
+}
+
+.primary-background-disabled {
+    background: $primary-color-disabled;
+}
+
+.secondary-background-disabled {
+    background: $secondary-color-disabled;
+}
+
+.tertiary-background-disabled {
+    background: $tertiary-color-disabled;
+}
+
+.primary-border-color-disabled {
+    border-color: $primary-color-disabled;
+}
+
+.secondary-border-color-disabled {
+    border-color: $secondary-color-disabled;
+}
+
+.tertiary-border-color-disabled {
+    border-color: $tertiary-color-disabled;
+}
+
 .orga-button {
     background-color: $primary-color;
     color: white;
