--- a/Organize.WASM/wwwroot/css/_variables.scss
+++ b/Organize.WASM/wwwroot/css/_variables.scss
@@ -1,3 +1,7 @@
 ﻿$primary-color: #00B0F0;
 $secondary-color: #C0A300;
 $tertiary-color: #8A00C0;
+
+$primary-color-disabled: lighten($primary-color,20%);
+$secondary-color-disabled: lighten($secondary-color,20%);
+$tertiary-color-disabled: lighten($tertiary-color,20%);
