--- a/Organize.WASM/Pages/SignIn.razor
+++ b/Organize.WASM/Pages/SignIn.razor
@@ -1,4 +1,5 @@
 ﻿@page "/signin"
+@page "/"
 @inherits SignInBase
 @layout UnAuthLayout
 
@@ -17,10 +18,11 @@
         @*<InputText type="password" class="sign-input form-control" placeholder="Password" @bind-Value="User.Password"/>
             <ValidationMessage For="@(() => User.Password)"></ValidationMessage>*@
         <div class="sign-validation">
-            <ValidationInput type="password"
+            <ValidationInput type="@(ShowPassword ? "text" : "password" )"
                              placeholder="Password"
                              @bind-Value="@User.Password"
                              Error="@GetError(() => User.Password)"></ValidationInput>
+            <input type="checkbox" @bind="ShowPassword" />Show Password
         </div>
         <button class="sign-button btn btn-primary" type="submit">Sign in</button>
     </EditForm>
